--- a/docs/src/.gitignore
+++ b/docs/src/.gitignore
@@ -24,6 +24,7 @@
 # Output
 *.pdf
 *.html
+!_template.html
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
