--- a/src/composer.json
+++ b/src/composer.json
@@ -16,9 +16,9 @@
     "readme": "../README.md",
     "license": "GPL-3.0-only",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
