--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ services:
 before_script:
   - cd src
   - mysql -e 'CREATE DATABASE fsc_emotionally;'
+  - mysql -e "CREATE USER 'fsc'@'localhost' IDENTIFIED WITH mysql_native_password;"
+  - mysql -e "GRANT ALL PRIVILEGES ON fsc_emotionally.* TO 'fsc'@'localhost';"
   - cp .env.example .env
   - composer self-update
   - composer install --no-interaction
