--- a/src/package.json
+++ b/src/package.json
@@ -24,6 +24,10 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.12.0"
+        "@fortawesome/fontawesome-free": "^5.12.0",
+        "datatables.net-bs4": "^1.10.20",
+        "datatables.net-fixedheader-bs4": "^3.1.6",
+        "datatables.net-responsive-bs4": "^2.2.3",
+        "datatables.net-searchpanes-bs4": "^1.0.1"
     }
 }
