--- a/src/package.json
+++ b/src/package.json
@@ -28,6 +28,7 @@
         "datatables.net-bs4": "^1.10.20",
         "datatables.net-fixedheader-bs4": "^3.1.6",
         "datatables.net-responsive-bs4": "^2.2.3",
-        "datatables.net-searchpanes-bs4": "^1.0.1"
+        "datatables.net-searchpanes-bs4": "^1.0.1",
+        "jquery.scrollbar": "^0.2.11"
     }
 }
