--- a/src/package.json
+++ b/src/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.12.0",
         "chart.js": "^2.9.3",
+        "chartjs-plugin-colorschemes": "^0.4.0",
         "datatables.net-bs4": "^1.10.20",
         "datatables.net-fixedheader-bs4": "^3.1.6",
         "datatables.net-responsive-bs4": "^2.2.3",
