--- a/src/package.json
+++ b/src/package.json
@@ -34,7 +34,7 @@
         "datatables.net-responsive-bs4": "^2.2.3",
         "datatables.net-searchpanes-bs4": "^1.0.1",
         "hammerjs": "^2.0.8",
-        "jquery-ui": "^1.12.1",
+        "jquery-ui-dist": "^1.12.1",
         "jquery.scrollbar": "^0.2.11"
     }
 }
