--- a/src/composer.json
+++ b/src/composer.json
@@ -17,10 +17,11 @@
     "license": "GPL-3.0-only",
     "require": {
         "php": "^7.3",
+        "ext-json": "*",
         "fideloper/proxy": "^4.0",
+        "james-heinrich/getid3": "^1.9",
         "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0",
-        "ext-json": "*"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
