Revert "Aggiunte dipendenze di base"
This reverts commit 952b6559d3410ab5326f55ad7d9eb77f31d07dc5.

--- a/analysis/composer.json
+++ b/analysis/composer.json
@@ -4,8 +4,7 @@
     "type": "project",
     "require": {
         "php": "^7.3",
-        "ext-json": "^1.7",
-        "nesk/puphpeteer": "dev-master"
+        "ext-json": "^1.7"
     },
     "license": "GPL-3.0-only",
     "minimum-stability": "dev"
