Modifiche finali alla sezione realtime

--- a/src/composer.json
+++ b/src/composer.json
@@ -21,8 +21,7 @@
         "fideloper/proxy": "^4.0",
         "james-heinrich/getid3": "^1.9",
         "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0",
-        "php-ffmpeg/php-ffmpeg": "^0.14.0"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
