--- a/src/.env.example
+++ b/src/.env.example
@@ -24,7 +24,7 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.googlemail.com'
+MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=465
 MAIL_FROM_ADDRESS=emotionally@example.com
 MAIL_FROM_NAME=Emotionally
