--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -52,8 +52,8 @@ exclude:
   - LICENSE
   - Makefile
   - make.bat
-  - src/
-  - user-manual/
+#   - src/
+#   - user-manual/
 
-include:
-  - src/images/
+# include:
+#   - src/images/
