--- a/src/public/.htaccess
+++ b/src/public/.htaccess
@@ -3,6 +3,8 @@
         Options -MultiViews -Indexes
     </IfModule>
 
+    # RewriteBase /emotionally
+
     RewriteEngine On
 
     # Handle Authorization Header
